# Binairo

./: CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: build-multiplatform.yml
android/app/jni/src/: Android.mk  CMakeLists.txt
